Fix #118 + fix z-index on navbar

--- a/ptitbiomed-ui/src/app/articles/article-viewer/article-viewer.component.css
+++ b/ptitbiomed-ui/src/app/articles/article-viewer/article-viewer.component.css
@@ -1,6 +1,6 @@
 
 #article-viewer {
-  max-width: max-content;
+  max-width: 1000px;
   margin: auto;
 }
 
